Finishing touches are done
It was never explicitly asked for, but I ended up making it so that conditionals in which a temporary variable is used within a "while" condition will be reassigned at the very end of the while loop; this way looping over variables that would change the temporary value actually works in the compiled code.

--- a/input.in
+++ b/input.in
@@ -1,13 +1,19 @@
-begin							--a program
-a:= BB - 314 * c;
-f := -6;
+begin						 --a program
 
-if (true) then
- a := !BB;
-endif
-
-while (false)
-	g := -8;
+b := 2;
+a := 0;
+while (!(a < b))
+	write(a);
+	a := a + 1;
 endwhile
+
+q := q * -3412340;
+if (true) then
+	r := a;
+	read(a, b, c, d);
+else
+	a := r;
+	write(a + b * 5, b, c, d);
+endif
 
 end
